# CroCoDiLight

./: .gitignore  .gitmodules  LICENSE  NOTICE  README.MD  pyproject.toml  requirements.txt
crocodilight/: __init__.py  inference.py  relighting_model.py  relighting_modules.py
crocodilight/evaluation/: __init__.py  metrics.py  whdr.py
datasets/: DATASETS.md
demos/: albedo_estimation.py  app.py  freeze_lighting.py  shadow_removal.py
evaluations/: __init__.py
lighting/: __init__.py  dataloader.py  inference.py  relighting_model.py  relighting_modules.py
scripts/: iiw.py  interpolate_lighting.py  pretrain_relight_decoder.py  shadow_eval.py  shadow_removal.py  swap_lighting.py  train_lighting_mapper.py  train_relight_model.py  whdr_full_evaluation.py
scripts/evaluation/: albedo_whdr.py  iiw_predict_and_score.py  shadow_metrics.py
scripts/inference/: albedo_estimation.py  freeze_lighting.py  interpolate_lighting.py  shadow_removal.py  swap_lighting.py  transfer_lighting.py
scripts/training/: pretrain_relight_decoder.py  train_lighting_mapper.py  train_relight_model.py
