[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crocodilight"
version = "1.0.0"
description = "CroCoDiLight image delighting and relighting"
readme = "README.MD"
requires-python = ">=3.9"
license = {text = "CC BY-NC-SA 4.0"}
authors = [
    {name = "Alistair Foggin", email = "alistair.foggin@york.ac.uk"}
]
dependencies = [
    "croco @ git+https://github.com/naver/croco.git@croco_module",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy",
    "pillow",
    "opencv-python",
    "lpips",
    "blended-tiling",
    "polars",
    "tqdm",
    "einops",
    "matplotlib",
    "scikit-image",
    "wandb",
]

[project.optional-dependencies]
curope = ["curope @ git+https://github.com/naver/croco.git@croco_module#subdirectory=curope"]
demos = ["gradio", "huggingface_hub"]

[tool.setuptools.packages.find]
where = ["."]
include = ["crocodilight*"]
